# LongWeekend

./: .gitignore  LongWeekend-web.service.template  README.md  config.py  env.template  pyproject.toml  run-me.sh  run.py
app/: __init__.py  commands.py  models.py
app/main/: views.py
app/templates/: base.html  index.html
common/: apininja.py  kiwi.py
migrations/versions/: 98fb37c3e710_add_month_field.py  bb96cb60d9fc_add_currency_fx_rate_fields.py  f6d6ef463e83_initial_migration.py
sql/: monthly_5_cheapest.sql
